# logseq-encrypt-ui

./: CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  cog.toml
.github/workflows/: release.yml  rust.yml
src/: logger.rs  main.rs  worker.rs
